--- a/ambani.html
+++ b/ambani.html
@@ -9,7 +9,7 @@
     <style>
         :root {
             --bg: #020617;
-            --card-bg: rgba(30, 41, 59, 0.8);
+            --card-bg: rgba(30, 41, 59, 0.85);
             --primary: #22c55e;
             --accent: #38bdf8;
             --danger: #ef4444;
@@ -24,7 +24,6 @@
             padding: 0;
         }
 
-        /* --- Fix for Faded Screen (Intro) --- */
         #gameIntro {
             position: fixed;
             top:0; left:0; width:100%; height:100%;
@@ -34,7 +33,7 @@
             justify-content: center;
             align-items: center;
             z-index: 2000;
-            transition: 0.8s ease;
+            transition: 0.5s ease;
         }
 
         header {
@@ -48,8 +47,6 @@
             text-align: center;
         }
 
-        h1 { font-family: 'Orbitron', sans-serif; font-size: 1.2rem; color: var(--accent); margin: 0; }
-
         .money-display {
             font-family: 'Orbitron', sans-serif;
             font-size: clamp(1.8rem, 6vw, 3.5rem);
@@ -58,27 +55,10 @@
             font-weight: 900;
         }
 
-        .progress-bar-wrap {
-            width: 80%;
-            height: 10px;
-            background: #111827;
-            margin: 10px auto;
-            border-radius: 20px;
-            border: 1px solid rgba(255,255,255,0.1);
-            overflow: hidden;
-        }
-
-        #progress-fill {
-            width: 0%;
-            height: 100%;
-            background: linear-gradient(90deg, var(--primary), var(--accent));
-            transition: 0.4s;
-        }
-
         .container {
             display: grid;
             grid-template-columns: repeat(auto-fit, minmax(280px, 1fr));
-            gap: 25px;
+            gap: 20px;
             padding: 40px 20px;
             max-width: 1400px;
             margin: 0 auto;
@@ -87,151 +67,89 @@
         .card {
             background: var(--card-bg);
             border: 1px solid rgba(255,255,255,0.1);
-            border-radius: 24px;
-            padding: 25px;
-            transition: 0.3s cubic-bezier(0.4, 0, 0.2, 1);
+            border-radius: 20px;
+            padding: 20px;
+            transition: 0.3s;
             text-align: center;
         }
 
-        .card:hover {
-            transform: translateY(-10px);
-            border-color: var(--accent);
-            background: rgba(30, 41, 59, 1);
-        }
+        .card:hover { border-color: var(--accent); transform: scale(1.02); }
 
-        .card-icon { font-size: 4rem; margin-bottom: 10px; display: block; }
-        .price-tag { color: var(--accent); font-weight: bold; font-size: 1.3rem; margin: 15px 0; }
+        .card-icon { font-size: 3.5rem; margin-bottom: 10px; display: block; }
         
-        .qty-label { 
-            background: #020617; 
-            padding: 4px 12px; 
-            border-radius: 10px; 
-            font-size: 0.8rem; 
-            margin-bottom: 15px; 
-            display: inline-block;
-        }
-
-        .controls { display: grid; grid-template-columns: 1fr 1fr; gap: 10px; }
-        
-        button {
-            padding: 15px;
-            border: none;
-            border-radius: 12px;
-            font-family: 'Orbitron', sans-serif;
-            font-weight: bold;
-            cursor: pointer;
-            transition: 0.2s;
-        }
-
-        .buy { background: var(--primary); color: #000; }
-        .buy:hover { box-shadow: 0 0 15px var(--primary); }
-        .sell { background: transparent; color: var(--danger); border: 2px solid var(--danger); }
-        .sell:hover { background: var(--danger); color: white; }
-
-        #twitter-box {
-            max-width: 900px;
-            margin: 50px auto;
-            padding: 0 20px;
-        }
+        .buy { background: var(--primary); color: #000; width: 100%; padding: 12px; border-radius: 8px; font-family: 'Orbitron'; font-weight: bold; cursor: pointer; border: none; }
+        .sell { background: transparent; color: var(--danger); border: 1px solid var(--danger); width: 100%; padding: 10px; border-radius: 8px; margin-top: 5px; cursor: pointer; }
 
         #tweets {
             background: #020617;
-            height: 350px;
+            height: 250px;
             overflow-y: auto;
-            border-radius: 20px;
-            border: 1px solid rgba(255,255,255,0.1);
-            padding: 20px;
-        }
-
-        .tweet {
-            background: #111827;
-            padding: 15px;
             border-radius: 15px;
-            margin-bottom: 15px;
-            border-left: 5px solid var(--accent);
-            text-align: left;
-            animation: popIn 0.3s ease;
+            margin: 20px;
+            padding: 15px;
         }
 
-        @keyframes popIn { from { opacity:0; transform: scale(0.9); } to { opacity:1; transform: scale(1); } }
+        .tweet { background: #111827; padding: 10px; border-radius: 10px; margin-bottom: 10px; border-left: 4px solid var(--accent); text-align: left; }
     </style>
 </head>
 <body>
 
 <div id="gameIntro">
-    <h1 style="font-size: 3rem; margin-bottom: 20px;">💰</h1>
-    <button onclick="startGame()" style="background: var(--accent); padding: 20px 50px; border-radius: 50px; font-size: 1.2rem;">IGNITE WEALTH</button>
+    <h1 style="font-family: Orbitron; color: var(--accent); margin-bottom: 20px;">AMBANI SIMULATOR</h1>
+    <button onclick="startGame()" style="background: var(--primary); padding: 20px 40px; border-radius: 50px; font-family: Orbitron; font-weight: bold; cursor:pointer; border: none;">ACCESS FORTUNE</button>
 </div>
 
-<header id="mainHeader">
-    <h1>AMBANI WEALTH SIMULATOR</h1>
+<header>
     <div class="money-display">₹ <span id="money">0</span></div>
-    <div class="progress-bar-wrap">
-        <div id="progress-fill"></div>
-    </div>
-    <p style="font-size: 0.7rem; letter-spacing: 2px; opacity: 0.7;">FORTUNE SPENT: <span id="percent">0</span>%</p>
+    <div style="font-size: 0.8rem; letter-spacing: 2px; color: var(--accent);">DIXIT LABS WEALTH DIVISION</div>
 </header>
 
 <div class="container" id="shop"></div>
 
-<div id="twitter-box">
-    <h2 style="font-family: 'Orbitron'; font-size: 1rem; color: var(--accent);">LIVE BILLIONAIRE FEED</h2>
+<div style="max-width: 800px; margin: 0 auto; padding: 20px;">
+    <h3 style="font-family: Orbitron; color: var(--accent);">GLOBAL REACTIONS</h3>
     <div id="tweets"></div>
 </div>
 
-<footer style="padding: 50px; text-align: center; opacity: 0.5; font-size: 0.8rem; font-family: 'Orbitron';">
-    © DIXIT LABS // WEALTH DIVISION
-</footer>
-
 <script>
     let initialMoney = 900000000000000;
-    let currentMoney = initialMoney;
+    let money = initialMoney;
 
-    const buySfx = new Audio('https://assets.mixkit.co/active_storage/sfx/1770/1770-preview.mp3');
-    const startupSfx = new Audio('https://assets.mixkit.co/active_storage/sfx/2568/2568-preview.mp3');
+    // Fixed: High-quality Cash Register sound
+    const buySfx = new Audio('https://assets.mixkit.co/active_storage/sfx/2019/2019-preview.mp3'); 
 
     const items = [
-        {name:"Candy", price:2, icon:"🍬"},
-        {name:"Samosa", price:20, icon:"🥟"},
-        {name:"Ice Cream", price:60, icon:"🍦"},
-        {name:"Phone", price:80000, icon:"📱"},
-        {name:"Gaming PC", price:250000, icon:"🖥️"},
-        {name:"Luxury Watch", price:5000000, icon:"⌚"},
-        {name:"Supercar", price:45000000, icon:"🏎️"},
-        {name:"Private Jet", price:6000000000, icon:"🛩️"},
-        {name:"IPL Team", price:75000000000, icon:"🏏"},
-        {name:"Space Rocket", price:400000000000, icon:"🚀"},
-        {name:"Small Country", price:5000000000000, icon:"🌍"},
-        {name:"Mars Colony", price:20000000000000, icon:"🔴"}
-    ];
-
-    const reactions = [
-        "Elon Musk: Stop spending my future budget! 💀",
-        "Jeff Bezos: I just saw your order... it's a lot.",
-        "Bill Gates: Have you considered a foundation? Just asking.",
-        "Shark Tank: This valuation is insane. I'm out.",
-        "Economist: You single-handedly caused inflation.",
-        "CA Friend: Bhai, please send me the GST bills."
+        {name:"Vada Pav", price:15, icon:"🍔"},
+        {name:"Starbucks Coffee", price:500, icon:"☕"},
+        {name:"iPhone 15 Pro Max", price:160000, icon:"📱"},
+        {name:"Gaming Rig (4090 Ti)", price:600000, icon:"🖥️"},
+        {name:"Rolex Yacht-Master", price:4500000, icon:"⌚"},
+        {name:"Lamborghini Revuelto", price:90000000, icon:"🏎️"},
+        {name:"Rolls-Royce Boat Tail", price:2300000000, icon:"🚗"},
+        {name:"Private Jet (Global 7500)", price:6500000000, icon:"✈️"},
+        {name:"Mega Yacht (Eco-Friendly)", price:25000000000, icon:"🛥️"},
+        {name:"Antilia Mansion", price:150000000000, icon:"🏢"},
+        {name:"IPL Team (Mumbai Indians)", price:100000000000, icon:"🏏"},
+        {name:"Private Island (Bahamas)", price:45000000000, icon:"🏝️"},
+        {name:"SpaceX Starship", price:12000000000, icon:"🚀"},
+        {name:"Nuclear Submarine", price:450000000000, icon:"⚓"},
+        {name:"Twitter / X", price:3600000000000, icon:"🐦"},
+        {name:"Reliance Industries Share (1%)", price:180000000000, icon:"📈"},
+        {name:"Small Country (GDP)", price:5000000000000, icon:"🌍"},
+        {name:"Moon Colony Base", price:85000000000000, icon:"🌑"}
     ];
 
     function startGame() {
-        startupSfx.play().catch(()=>{});
         document.getElementById("gameIntro").style.opacity = "0";
         setTimeout(() => {
             document.getElementById("gameIntro").style.display = "none";
-            updateGlobalUI();
-        }, 800);
+        }, 500);
+        updateUI();
     }
 
-    function updateGlobalUI() {
-        document.getElementById("money").innerText = currentMoney.toLocaleString('en-IN');
-        let spent = initialMoney - currentMoney;
-        let p = (spent / initialMoney) * 100;
-        document.getElementById("progress-fill").style.width = p + "%";
-        document.getElementById("percent").innerText = p.toFixed(4);
+    function updateUI() {
+        document.getElementById("money").innerText = money.toLocaleString('en-IN');
     }
-
-    const shop = document.getElementById("shop");
 
     items.forEach(item => {
         let qty = 0;
@@ -239,29 +157,29 @@
         card.className = "card";
         card.innerHTML = `
             <span class="card-icon">${item.icon}</span>
-            <div class="qty-label" id="qty${item.name}">Owned: 0</div>
-            <h3 style="font-family:Orbitron; margin:5px 0;">${item.name}</h3>
-            <p class="price-tag">₹${item.price.toLocaleString('en-IN')}</p>
-            <div class="controls">
-                <button class="buy">BUY</button>
-                <button class="sell">SELL</button>
-            </div>
+            <h3 style="font-family:Orbitron; margin:5px 0; font-size:1.1rem;">${item.name}</h3>
+            <p style="color:var(--accent); font-weight:bold; font-size: 1.1rem;">₹${item.price.toLocaleString('en-IN')}</p>
+            <div id="qty${item.name}" style="margin-bottom:12px; font-size:0.9rem; background: rgba(0,0,0,0.3); padding: 5px; border-radius: 5px;">Owned: 0</div>
+            <button class="buy">BUY ITEM</button>
+            <button class="sell">SELL BACK</button>
         `;
 
         card.querySelector(".buy").onclick = () => {
-            if(currentMoney >= item.price) {
-                currentMoney -= item.price;
+            if(money >= item.price) {
+                money -= item.price;
                 qty++;
                 buySfx.currentTime = 0;
                 buySfx.play().catch(()=>{});
                 updateItemUI();
-                if(Math.random() > 0.7) addTweet(reactions[Math.floor(Math.random()*reactions.length)]);
+                addTweet(`🚨 BREAKING: Ambani just acquired ${item.name}!`);
+            } else {
+                addTweet(`❌ Error: Insufficient funds for ${item.name}. Wait, how?`);
             }
         };
 
         card.querySelector(".sell").onclick = () => {
             if(qty > 0) {
-                currentMoney += item.price;
+                money += item.price;
                 qty--;
                 updateItemUI();
             }
@@ -269,23 +187,20 @@
 
         function updateItemUI() {
             document.getElementById(`qty${item.name}`).innerText = "Owned: " + qty;
-            updateGlobalUI();
+            updateUI();
         }
-
-        shop.appendChild(card);
+        document.getElementById("shop").appendChild(card);
     });
 
     function addTweet(msg) {
         const box = document.getElementById("tweets");
         const t = document.createElement("div");
         t.className = "tweet";
-        t.innerHTML = `<strong>@GlobalFeed</strong>: ${msg}`;
+        t.innerHTML = `<strong>@WealthMonitor</strong>: ${msg}`;
         box.prepend(t);
     }
 
-    // Initial run to set money display
-    updateGlobalUI();
+    updateUI(); // Initial money display
 </script>
-
 </body>
 </html>
