--- a/index.html
+++ b/index.html
@@ -127,7 +127,7 @@
         <div class="card">
             <h3>GROSSDUMP.AI</h3>
             <p>Catch trash. Dodge toxins. Experience the high-performance pro build of the waste engine.</p>
-            <button class="btn" onclick="location.href='game.html'">RUN_MODULE</button>
+            <button class="btn" onclick="location.href='grossdump.html'">RUN_MODULE</button>
         </div>
 
         <div class="card">
@@ -152,7 +152,7 @@
     <footer>
         <p style="letter-spacing: 3px;">ATHARV DIXIT // STUDENT DEVELOPER</p>
         <div class="email-box">
-            <a href="mailto:atharvdixit07@gmail.com" class="email">atharvdixit07@gmail.com</a>
+            <a href="mailto:atharvdixit07@gmail.com" class="email">dixit181896@gmail.com</a>
         </div>
         <div style="margin-top: 30px; opacity: 0.3; font-size: 10px;">
             © 2026 DIXLABS CORE <br>
@@ -190,3 +190,4 @@
     </script>
 </body>
 </html>
+
