--- a/index.html
+++ b/index.html
@@ -112,7 +112,7 @@
 
     <header>
         <div class="logo-text">DIXLABS</div>
-        <p style="font-family: 'JetBrains Mono'; color: var(--neon-pink); margin-top: 15px; font-size: 12px;">> EXPERIMENTAL_ARCHIVE // ATHARV_DIXIT</p>
+        <p style="font-family: 'JetBrains Mono'; color: var(--neon-pink); margin-top: 15px; font-size: 12px;">> EXPERIMENTAL_PLAYGROUND // ATHARV_DIXIT // AGE-15 // INDIA </p>
     </header>
 
     <div class="projects">
@@ -179,3 +179,4 @@
     </script>
 </body>
 </html>
+
