--- a/index.html
+++ b/index.html
@@ -22,7 +22,6 @@
             margin: 0; background: var(--bg-dark);
             color: white; font-family: 'Orbitron', sans-serif;
             text-align: center; overflow-x: hidden;
-            padding-bottom: 80px; /* Space for fixed tabs */
         }
 
         /* CRT Scanline Overlay */
@@ -37,13 +36,14 @@
             position: fixed; inset: 0; background: #000;
             display: flex; flex-direction: column; justify-content: center;
             align-items: center; z-index: 100000;
-            transition: 0.8s cubic-bezier(0.7, 0, 0.3, 1);
+            transition: opacity 0.5s ease, visibility 0.5s;
         }
 
         #dixlabsLogo {
-            width: 250px; 
+            width: 200px; 
             filter: drop-shadow(0 0 15px var(--neon-blue));
             animation: breathe 3s infinite ease-in-out;
+            margin-bottom: 30px;
         }
 
         @keyframes breathe {
@@ -51,9 +51,24 @@
             50% { transform: scale(1.05); opacity: 1; }
         }
 
+        /* --- NAVIGATION TABS --- */
+        .nav-tabs {
+            position: sticky; top: 0; background: rgba(2, 6, 23, 0.95);
+            backdrop-filter: blur(10px); display: flex; justify-content: center;
+            gap: 20px; padding: 15px; border-bottom: 1px solid rgba(56, 189, 248, 0.1);
+            z-index: 999;
+        }
+
+        .tab-link {
+            text-decoration: none; color: #94a3b8; font-size: 10px;
+            letter-spacing: 2px; transition: 0.3s; display: flex; align-items: center; gap: 8px;
+        }
+
+        .tab-link:hover { color: var(--neon-blue); text-shadow: 0 0 10px var(--neon-blue); }
+
         /* --- UI COMPONENTS --- */
         header {
-            padding: 80px 20px;
+            padding: 100px 20px;
             border-bottom: 1px solid rgba(56, 189, 248, 0.1);
             background: radial-gradient(circle at top, #0f172a, #020617);
         }
@@ -62,21 +77,6 @@
             font-size: clamp(2.5rem, 8vw, 4.5rem); font-weight: 900; letter-spacing: 12px;
             color: var(--neon-blue); text-shadow: 0 0 20px rgba(56, 189, 248, 0.5);
         }
-
-        /* --- NAVIGATION TABS --- */
-        .nav-tabs {
-            position: sticky; top: 0; background: rgba(2, 6, 23, 0.9);
-            backdrop-filter: blur(10px); display: flex; justify-content: center;
-            gap: 20px; padding: 15px; border-bottom: 1px solid rgba(56, 189, 248, 0.1);
-            z-index: 100;
-        }
-
-        .tab-link {
-            text-decoration: none; color: #94a3b8; font-size: 10px;
-            letter-spacing: 2px; transition: 0.3s; display: flex; align-items: center; gap: 8px;
-        }
-
-        .tab-link:hover, .tab-link.active { color: var(--neon-blue); text-shadow: 0 0 10px var(--neon-blue); }
 
         .projects {
             display: flex; justify-content: center; flex-wrap: wrap;
@@ -95,19 +95,16 @@
             box-shadow: 0 10px 40px rgba(56, 189, 248, 0.2);
         }
 
-        .card-icon {
-            font-size: 2.5rem; margin-bottom: 15px;
-            filter: drop-shadow(0 0 10px rgba(255,255,255,0.2));
-        }
+        .card-icon { font-size: 2rem; margin-bottom: 15px; }
 
-        h3 { font-size: 1.2rem; color: #fff; letter-spacing: 2px; margin-top: 0; }
+        h3 { font-size: 1.1rem; color: #fff; letter-spacing: 2px; margin: 0 0 10px 0; }
         p { font-family: 'JetBrains Mono', monospace; font-size: 13px; color: #94a3b8; line-height: 1.6; }
 
         .btn {
             margin-top: 25px; padding: 14px; border: 1px solid var(--neon-blue);
             background: transparent; color: var(--neon-blue);
             font-family: 'Orbitron'; cursor: pointer; font-weight: 900;
-            transition: 0.3s; font-size: 11px; letter-spacing: 2px;
+            transition: 0.3s; font-size: 10px; letter-spacing: 2px;
         }
 
         .btn:hover { background: var(--neon-blue); color: #000; box-shadow: 0 0 20px var(--neon-blue); }
@@ -125,23 +122,24 @@
 <body>
 
     <div id="dixlabsIntro">
-        <img src="logo.png" id="dixlabsLogo" alt="DIXIT LABS LOGO" onerror="this.style.display='none'">
-        <button onclick="boot()" id="bootBtn" style="margin-top: 40px; background: none; border: 1px solid #fff; color: #fff; padding: 12px 40px; cursor: pointer; font-family: 'Orbitron'; letter-spacing: 5px;">INITIALIZE_CORE</button>
+        <img src="logo.png" id="dixlabsLogo" alt="LOGO" onerror="this.style.display='none'">
+        <button onclick="boot()" id="bootBtn" style="background: none; border: 1px solid #fff; color: #fff; padding: 15px 40px; cursor: pointer; font-family: 'Orbitron'; letter-spacing: 5px; font-weight: 900;">INITIALIZE_CORE</button>
     </div>
 
     <nav class="nav-tabs">
-        <a href="#" class="tab-link active"><span>🏠</span> HOME</a>
-        <a href="#games" class="tab-link"><span>🎮</span> GAMES</a>
-        <a href="#focus" class="tab-link"><span>⚡</span> FOCUS</a>
-        <a href="#logs" class="tab-link"><span>📂</span> LOGS</a>
+        <a href="#" class="tab-link">🏠 HOME</a>
+        <a href="#games-section" class="tab-link">🎮 GAMES</a>
+        <a href="#focus-section" class="tab-link">⚡ FOCUS</a>
     </nav>
 
-    <header>
+    <header id="top">
         <div class="logo-text">DIXLABS</div>
-        <p style="font-family: 'JetBrains Mono'; color: var(--neon-pink); margin-top: 15px; font-size: 12px;">> EXPERIMENTAL_PLAYGROUND // GAMES // FOCUS // FACTS </p>
+        <p style="font-family: 'JetBrains Mono'; color: var(--neon-pink); margin-top: 15px; font-size: 12px;">
+            > EXPERIMENTAL_PLAYGROUND // GAMES // FOCUS // FACTS 
+        </p>
     </header>
 
-    <div class="projects" id="games">
+    <div class="projects" id="games-section">
         <div class="card" style="border-top: 4px solid var(--neon-blue);">
             <div class="card-icon">🗑️</div>
             <h3>GROSSDUMPSTER</h3>
@@ -156,7 +154,7 @@
             <button class="btn" onclick="location.href='ambani.html'">RUN_MODULE</button>
         </div>
 
-        <div class="card" style="border-top: 4px solid var(--neon-pink);">
+        <div class="card" id="focus-section" style="border-top: 4px solid var(--neon-pink);">
             <div class="card-icon">🧠</div>
             <h3>DEEPWORK.PRO</h3>
             <p>Mission-critical 3-hour focus terminal with integrated media bridges.</p>
@@ -182,11 +180,32 @@
 
     <script>
         function boot() {
+            // Sound Effect
             try {
                 const audioCtx = new (window.AudioContext || window.webkitAudioContext)();
                 const osc = audioCtx.createOscillator();
                 const gain = audioCtx.createGain();
                 osc.type = 'sawtooth';
                 osc.frequency.setValueAtTime(80, audioCtx.currentTime);
-                osc.frequency.exponentialRampToValueAtTime(600, audioCtx.currentTime + 0.6);
-                gain.gain.setValueAtTime(
+                osc.frequency.exponentialRampToValueAtTime(600, audioCtx.currentTime + 0.4);
+                gain.gain.setValueAtTime(0.1, audioCtx.currentTime);
+                gain.gain.exponentialRampToValueAtTime(0.01, audioCtx.currentTime + 0.4);
+                osc.connect(gain);
+                gain.connect(audioCtx.destination);
+                osc.start();
+                osc.stop(audioCtx.currentTime + 0.4);
+            } catch(e) {}
+
+            // Fade Out and Remove Intro
+            const intro = document.getElementById("dixlabsIntro");
+            intro.style.opacity = "0";
+            
+            setTimeout(() => {
+                intro.style.display = "none";
+                // Force scroll to top just in case
+                window.scrollTo(0, 0);
+            }, 500);
+        }
+    </script>
+</body>
+</html>
