--- a/index.html
+++ b/index.html
@@ -18,87 +18,66 @@
             --bg-dark: #020617;
         }
 
-        /* Base Body - Solid Color ensures no flicker */
         body {
-            margin: 0; 
-            background-color: #020617; 
-            color: white; 
-            font-family: 'Orbitron', sans-serif;
-            text-align: center; 
-            overflow-x: hidden;
+            margin: 0; background-color: var(--bg-dark); color: white; 
+            font-family: 'Orbitron', sans-serif; text-align: center; overflow-x: hidden;
         }
 
-        /* Particles - Kept very subtle and behind everything */
-        .particles {
-            position: fixed;
-            top: 0; left: 0; width: 100%; height: 100%;
-            background-image: radial-gradient(circle, rgba(56, 189, 248, 0.15) 1px, transparent 1px);
-            background-size: 50px 50px;
-            z-index: 1; 
-            pointer-events: none;
-        }
-
-        /* --- THE STARTUP SCREEN (The Fix) --- */
+        /* --- STATIC STARTUP SCREEN (No Animations) --- */
         #dixlabsIntro {
-            position: fixed; 
-            inset: 0; 
-            background: #000000;
-            display: flex; 
-            flex-direction: column; 
-            justify-content: center;
-            align-items: center; 
-            z-index: 9999; /* Higher than particles */
-            transition: opacity 0.5s ease;
+            position: fixed; inset: 0; background: #000;
+            display: flex; flex-direction: column; justify-content: center;
+            align-items: center; z-index: 999999;
         }
 
-        /* --- MAIN CONTENT CONTAINER --- */
-        #mainContent {
-            position: relative;
-            z-index: 10; /* Content sits above particles */
+        .intro-btn {
+            background: none; border: 2px solid #fff; color: #fff; 
+            padding: 15px 40px; cursor: pointer; font-family: 'Orbitron'; 
+            letter-spacing: 5px; font-weight: 900;
         }
 
+        /* --- BACKGROUND PARTICLES --- */
+        .particles {
+            position: fixed; top: 0; left: 0; width: 100%; height: 100%;
+            background-image: radial-gradient(circle, rgba(56, 189, 248, 0.15) 1px, transparent 1px);
+            background-size: 50px 50px; z-index: -1; animation: moveBackground 30s linear infinite;
+        }
+        @keyframes moveBackground { from { background-position: 0 0; } to { background-position: 100px 100px; } }
+
+        /* --- NAVIGATION --- */
         .nav-tabs {
             position: sticky; top: 0; background: rgba(2, 6, 23, 0.95);
             backdrop-filter: blur(10px); display: flex; justify-content: center;
-            gap: 15px; padding: 15px; border-bottom: 1px solid rgba(255, 255, 255, 0.1);
+            gap: 15px; padding: 15px; border-bottom: 1px solid rgba(255, 255, 255, 0.1); z-index: 999;
         }
-
-        .tab-link {
-            cursor: pointer; padding: 8px 15px; font-size: 10px; 
-            letter-spacing: 1px; text-transform: uppercase; font-weight: 900;
-        }
+        .tab-link { cursor: pointer; padding: 8px 15px; font-size: 10px; letter-spacing: 1px; text-transform: uppercase; font-weight: 900; transition: 0.3s; }
         .tab-home.active { border: 1px solid #fff; box-shadow: 0 0 10px #fff; }
         .tab-games { color: var(--neon-blue); }
         .tab-games.active { border: 1px solid var(--neon-blue); box-shadow: 0 0 10px var(--neon-blue); }
         .tab-focus { color: var(--neon-pink); }
         .tab-focus.active { border: 1px solid var(--neon-pink); box-shadow: 0 0 10px var(--neon-pink); }
 
-        header { padding: 80px 20px; }
-        .logo-text { font-size: 3rem; font-weight: 900; letter-spacing: 10px; color: var(--neon-blue); }
+        header { padding: 60px 20px; }
+        .logo-text { font-size: clamp(2rem, 6vw, 4rem); font-weight: 900; letter-spacing: 10px; color: var(--neon-blue); text-shadow: 0 0 15px rgba(56, 189, 248, 0.4); }
 
         /* --- CARDS & HOVER EFFECTS --- */
         .projects { display: flex; justify-content: center; flex-wrap: wrap; gap: 25px; padding: 40px 20px; }
-        
         .card {
             background: rgba(15, 23, 42, 0.8); border: 1px solid rgba(56, 189, 248, 0.1);
             padding: 30px; border-radius: 4px; width: 280px; text-align: left;
             transition: all 0.4s cubic-bezier(0.175, 0.885, 0.32, 1.275);
         }
-
-        /* Hover Animation */
         .card:hover { 
-            transform: translateY(-10px) scale(1.03); 
-            border-color: var(--neon-blue);
+            transform: translateY(-10px) scale(1.03); border-color: var(--neon-blue);
             box-shadow: 0 20px 40px rgba(0,0,0,0.6), 0 0 20px rgba(56, 189, 248, 0.2);
         }
-
         .card-icon { font-size: 2.5rem; margin-bottom: 15px; display: inline-block; transition: 0.6s; }
         .card:hover .card-icon { transform: rotateY(360deg); }
 
         .btn {
             margin-top: 20px; padding: 12px; border: 1px solid var(--neon-blue);
             background: transparent; color: var(--neon-blue); cursor: pointer;
-            font-family: 'Orbitron'; font-size: 10px; font-weight: 900; width: 100%;
+            font-family: 'Orbitron'; font-size: 10px; font-weight: 900; width: 100%; transition: 0.3s;
         }
         .btn:hover { background: var(--neon-blue); color: #000; letter-spacing: 2px; }
 
@@ -109,8 +88,8 @@
 <body>
 
     <div id="dixlabsIntro">
-        <img src="logo.png" style="width:200px; margin-bottom:30px;" onerror="this.style.display='none'">
-        <button onclick="boot()" style="background:none; border:2px solid #fff; color:#fff; padding:15px 40px; cursor:pointer; font-family:'Orbitron'; letter-spacing:5px; font-weight:900;">INITIALIZE_CORE</button>
+        <img src="logo.png" style="width:180px; margin-bottom:30px;" onerror="this.style.display='none'">
+        <button class="intro-btn" onclick="boot()">INITIALIZE_CORE</button>
     </div>
 
     <div class="particles"></div>
@@ -128,4 +107,80 @@
         </header>
 
         <div class="projects">
-            <div class="card category-game" style="border-top:
+            <div class="card category-game" style="border-top: 4px solid var(--neon-blue);">
+                <div class="card-icon">🗑️</div>
+                <h3>GROSSDUMPSTER</h3>
+                <p>Catch trash and survive the waste-land.</p>
+                <button class="btn" onclick="location.href='gd.html'">RUN_MODULE</button>
+            </div>
+            <div class="card category-game" style="border-top: 4px solid var(--neon-blue);">
+                <div class="card-icon">💰</div>
+                <h3>AMBANI_MONEY</h3>
+                <p>Infinite billionaire fortune simulator.</p>
+                <button class="btn" onclick="location.href='ambani.html'">RUN_MODULE</button>
+            </div>
+            <div class="card category-focus" style="border-top: 4px solid var(--neon-pink);">
+                <div class="card-icon">🧘</div>
+                <h3>DEEPWORK.PRO</h3>
+                <p>Mission-critical focus terminal.</p>
+                <button class="btn" style="border-color: var(--neon-pink); color: var(--neon-pink);" onclick="location.href='deepwork.html'">RUN_MODULE</button>
+            </div>
+        </div>
+
+        <footer>
+            <p>DIXLABS 2026 // ATHARV DIXIT</p>
+            <p>Contact: <a href="mailto:dixit181896@gmail.com" style="color: var(--neon-blue); text-decoration:none;">dixit181896@gmail.com</a></p>
+        </footer>
+    </div>
+
+    <script>
+        function boot() {
+            // Instant hide to prevent sticking
+            document.getElementById("dixlabsIntro").style.display = "none";
+            
+            // Typewriter start
+            typeWriter();
+
+            // Futuristic Sound
+            try {
+                const ctx = new (window.AudioContext || window.webkitAudioContext)();
+                const osc = ctx.createOscillator();
+                const gain = ctx.createGain();
+                osc.type = 'sawtooth';
+                osc.frequency.setValueAtTime(40, ctx.currentTime);
+                osc.frequency.exponentialRampToValueAtTime(800, ctx.currentTime + 0.5);
+                gain.gain.setValueAtTime(0.1, ctx.currentTime);
+                gain.gain.exponentialRampToValueAtTime(0.01, ctx.currentTime + 0.5);
+                osc.connect(gain); gain.connect(ctx.destination);
+                osc.start(); osc.stop(ctx.currentTime + 0.5);
+            } catch(e) { console.log("Audio blocked or not supported"); }
+        }
+
+        function typeWriter() {
+            const el = document.getElementById("subHeader");
+            const txt = "> EXPERIMENTAL_PLAYGROUND // GAMES // FOCUS";
+            let i = 0;
+            el.innerHTML = "";
+            function type() {
+                if (i < txt.length) {
+                    el.innerHTML += txt.charAt(i);
+                    i++;
+                    setTimeout(type, 40);
+                }
+            }
+            type();
+        }
+
+        function filterSelection(cat, el) {
+            const cards = document.querySelectorAll(".card");
+            const tabs = document.querySelectorAll(".tab-link");
+            tabs.forEach(t => t.classList.remove("active"));
+            el.classList.add("active");
+            cards.forEach(c => {
+                if(cat === 'all') c.classList.remove("hidden");
+                else c.classList.contains("category-" + cat) ? c.classList.remove("hidden") : c.classList.add("hidden");
+            });
+        }
+    </script>
+</body>
+</html>
