--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
             font-family: 'Orbitron', sans-serif; text-align: center; overflow-x: hidden;
         }
 
-        /* --- STATIC STARTUP SCREEN (No Animations) --- */
+        /* --- STATIC STARTUP SCREEN --- */
         #dixlabsIntro {
             position: fixed; inset: 0; background: #000;
             display: flex; flex-direction: column; justify-content: center;
@@ -33,8 +33,9 @@
         .intro-btn {
             background: none; border: 2px solid #fff; color: #fff; 
             padding: 15px 40px; cursor: pointer; font-family: 'Orbitron'; 
-            letter-spacing: 5px; font-weight: 900;
+            letter-spacing: 5px; font-weight: 900; transition: 0.2s;
         }
+        .intro-btn:hover { background: #fff; color: #000; }
 
         /* --- BACKGROUND PARTICLES --- */
         .particles {
@@ -56,11 +57,13 @@
         .tab-games.active { border: 1px solid var(--neon-blue); box-shadow: 0 0 10px var(--neon-blue); }
         .tab-focus { color: var(--neon-pink); }
         .tab-focus.active { border: 1px solid var(--neon-pink); box-shadow: 0 0 10px var(--neon-pink); }
+        .tab-facts { color: var(--neon-green); }
+        .tab-facts.active { border: 1px solid var(--neon-green); box-shadow: 0 0 10px var(--neon-green); }
 
         header { padding: 60px 20px; }
         .logo-text { font-size: clamp(2rem, 6vw, 4rem); font-weight: 900; letter-spacing: 10px; color: var(--neon-blue); text-shadow: 0 0 15px rgba(56, 189, 248, 0.4); }
 
-        /* --- CARDS & HOVER EFFECTS --- */
+        /* --- CARDS --- */
         .projects { display: flex; justify-content: center; flex-wrap: wrap; gap: 25px; padding: 40px 20px; }
         .card {
             background: rgba(15, 23, 42, 0.8); border: 1px solid rgba(56, 189, 248, 0.1);
@@ -81,6 +84,13 @@
         }
         .btn:hover { background: var(--neon-blue); color: #000; letter-spacing: 2px; }
 
+        /* --- ABOUT SECTION --- */
+        .about-section {
+            max-width: 800px; margin: 80px auto; padding: 40px;
+            background: rgba(15, 23, 42, 0.4); border: 1px solid rgba(56, 189, 248, 0.1);
+            text-align: left;
+        }
+
         .hidden { display: none !important; }
         footer { padding: 60px 20px; background: #000; font-family: 'JetBrains Mono'; font-size: 12px; }
     </style>
@@ -99,6 +109,7 @@
             <div class="tab-link tab-home active" onclick="filterSelection('all', this)">🏠 ALL</div>
             <div class="tab-link tab-games" onclick="filterSelection('game', this)">🎮 GAMES</div>
             <div class="tab-link tab-focus" onclick="filterSelection('focus', this)">⚡ FOCUS</div>
+            <div class="tab-link tab-facts" onclick="filterSelection('fact', this)">🧠 FACTS</div>
         </nav>
 
         <header>
@@ -110,22 +121,37 @@
             <div class="card category-game" style="border-top: 4px solid var(--neon-blue);">
                 <div class="card-icon">🗑️</div>
                 <h3>GROSSDUMPSTER</h3>
-                <p>Catch trash and survive the waste-land.</p>
+                <p>Catch trash and survive the waste-land. Survival engine alpha.</p>
                 <button class="btn" onclick="location.href='gd.html'">RUN_MODULE</button>
             </div>
             <div class="card category-game" style="border-top: 4px solid var(--neon-blue);">
                 <div class="card-icon">💰</div>
                 <h3>AMBANI_MONEY</h3>
-                <p>Infinite billionaire fortune simulator.</p>
+                <p>Infinite billionaire fortune simulator. Test your consumer limits.</p>
                 <button class="btn" onclick="location.href='ambani.html'">RUN_MODULE</button>
             </div>
+
             <div class="card category-focus" style="border-top: 4px solid var(--neon-pink);">
                 <div class="card-icon">🧘</div>
                 <h3>DEEPWORK.PRO</h3>
-                <p>Mission-critical focus terminal.</p>
+                <p>Mission-critical focus terminal with integrated media bridges.</p>
                 <button class="btn" style="border-color: var(--neon-pink); color: var(--neon-pink);" onclick="location.href='deepwork.html'">RUN_MODULE</button>
             </div>
+
+            <div class="card category-fact" style="border-top: 4px solid var(--neon-green);">
+                <div class="card-icon">🔬</div>
+                <h3>BIO_ARCHIVE</h3>
+                <p>Researching the intersection of Bio-Chem and Web Architecture.</p>
+                <button class="btn" style="border-color: var(--neon-green); color: var(--neon-green);">ACCESS_FILES</button>
+            </div>
         </div>
+
+        <section class="about-section">
+            <div style="color: var(--neon-green); letter-spacing: 2px; margin-bottom: 10px;">[🧬] ABOUT_THE_DEV</div>
+            <div style="font-family: 'JetBrains Mono'; font-size: 14px; line-height: 1.6; color: #cbd5e1;">
+                I am <b style="color: var(--neon-blue);">Atharv Dixit</b>, 15, India. Bio-Chem enthusiast and web disruptor. Inspired by the drive of <b style="color: var(--neon-pink);">Virat Kohli</b>.
+            </div>
+        </section>
 
         <footer>
             <p>DIXLABS 2026 // ATHARV DIXIT</p>
@@ -135,13 +161,8 @@
 
     <script>
         function boot() {
-            // Instant hide to prevent sticking
             document.getElementById("dixlabsIntro").style.display = "none";
-            
-            // Typewriter start
             typeWriter();
-
-            // Futuristic Sound
             try {
                 const ctx = new (window.AudioContext || window.webkitAudioContext)();
                 const osc = ctx.createOscillator();
@@ -153,12 +174,12 @@
                 gain.gain.exponentialRampToValueAtTime(0.01, ctx.currentTime + 0.5);
                 osc.connect(gain); gain.connect(ctx.destination);
                 osc.start(); osc.stop(ctx.currentTime + 0.5);
-            } catch(e) { console.log("Audio blocked or not supported"); }
+            } catch(e) {}
         }
 
         function typeWriter() {
             const el = document.getElementById("subHeader");
-            const txt = "> EXPERIMENTAL_PLAYGROUND // GAMES // FOCUS";
+            const txt = "> EXPERIMENTAL_PLAYGROUND // GAMES // FOCUS // FACTS";
             let i = 0;
             el.innerHTML = "";
             function type() {
